# artifacts/api-server/src/routes/index.ts
@@ -10,6 +10,7 @@ import dashboardRouter from "./dashboard";
 import settingsRouter from "./settings";
 import staffRouter from "./staff";
 import storageRouter from "./storage";
+import messagesRouter from "./messages";
 
 const router: IRouter = Router();
 
@@ -24,5 +25,6 @@ router.use(dashboardRouter);
 router.use(settingsRouter);
 router.use(staffRouter);
 router.use(storageRouter);
+router.use(messagesRouter);
 
 export default router;
